--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>gfdgfgfd</h1>
-    <p>екнкн</p>
+    <div>
+      <h1>gfdgfgfd</h1>
+      <p>екнкн</p>
+    </div>
   </body>
 </html>
