--- a/index.html
+++ b/index.html
@@ -7,9 +7,28 @@
     <title>Document</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href=""><span>Web</span>Studio</a>
+        <ul>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
     <div>
-      <h1>gfdgfgfd</h1>
-      <p>екнкн</p>
+      <section>
+        <h1>
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
+        <a href="">Заказать услугу</a>
+      </section>
     </div>
   </body>
 </html>
