--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <!--Header-->
     <header>
       <nav>
-        <a href=""><span>Web</span>Studio</a>
+        <img src="./img/WebStudio.svg" alt="" />
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -21,7 +22,9 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <div>
+    <!--Main-->
+    <main>
+      <!--Order-->
       <section>
         <h1>
           Эффективные решения <br />
@@ -29,6 +32,87 @@
         </h1>
         <a href="">Заказать услугу</a>
       </section>
-    </div>
+      <!--Abuot us-->
+      <section>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </section>
+      <!-- project -->
+      <section>
+        <h3>Чем мы занимаемся</h3>
+        <ul>
+          <li>
+            <img src="./img/img.png" alt="" />
+          </li>
+          <li>
+            <img src="./img/box 2.png" alt="" />
+          </li>
+          <li>
+            <img src="./img/box 3.png" alt="" />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <!--Team -->
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./img/team card 1.jpg" alt="" width="270" height="260" />
+            <h3>Игорь Демьяненко</h3>
+            <h3>Product Designer</h3>
+          </li>
+          <li>
+            <img src="./img/team card 2.jpg" alt="" width="270" height="260" />
+            <h3>Ольга Репина</h3>
+            <h3>Frontend Developer</h3>
+          </li>
+          <li>
+            <img src="./img/team card 3.jpg" alt="" width="270" height="260" />
+            <h3>Николай Тарасов</h3>
+            <h3>Marketing</h3>
+          </li>
+          <li>
+            <img src="./img/team card 4.jpg" alt="" width="270" height="260" />
+            <h3>Михаил Ермаков</h3>
+            <h3>UI Designer</h3>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <!--Footer-->
+    <footer>
+      <img src="./img/WebStudio.svg" alt="" />
+      <ul>
+        <li>
+          <p>г. Киев, пр-т Леси Украинки, 26</p>
+        </li>
+        <li>
+          <a href="mailto:info@example.com">info@example.com</a>
+        </li>
+        <li>
+          <a href="tel:+380991111111">+38 099 111 11 11</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
