--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Header-->
     <header>
       <nav>
-        <img src="./img/WebStudio.svg" alt="" />
+        <img src="./img/WebStudio.svg" alt="WebStudio" />
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -57,51 +57,51 @@
           </li>
         </ul>
       </section>
-      <!-- project -->
+      <!--Project -->
       <section>
         <h3>Чем мы занимаемся</h3>
         <ul>
           <li>
-            <img src="./img/img.png" alt="" />
+            <img src="./img/img.png" alt="Проект-1" />
           </li>
           <li>
-            <img src="./img/box 2.png" alt="" />
+            <img src="./img/box%202.png" alt="Проект-2" />
           </li>
           <li>
-            <img src="./img/box 3.png" alt="" />
+            <img src="./img/box%203.png" alt="Проект-3" />
           </li>
         </ul>
       </section>
+      <!--Team-->
       <section>
-        <!--Team -->
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./img/team card 1.jpg" alt="" width="270" height="260" />
+            <img src="./img/team%20card%201.jpg" alt="Игорь Демьяненко" width="270" />
             <h3>Игорь Демьяненко</h3>
-            <h3>Product Designer</h3>
+            <p>Product Designer</p>
           </li>
           <li>
-            <img src="./img/team card 2.jpg" alt="" width="270" height="260" />
+            <img src="./img/team%20card%202.jpg" alt="Ольга Репина" width="270" />
             <h3>Ольга Репина</h3>
-            <h3>Frontend Developer</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./img/team card 3.jpg" alt="" width="270" height="260" />
+            <img src="./img/team%20card%203.jpg" alt="Николай Тарасов" width="270" />
             <h3>Николай Тарасов</h3>
-            <h3>Marketing</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="./img/team card 4.jpg" alt="" width="270" height="260" />
+            <img src="./img/team%20card%204.jpg" alt="Михаил Ермаков" width="270" />
             <h3>Михаил Ермаков</h3>
-            <h3>UI Designer</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Footer-->
     <footer>
-      <img src="./img/WebStudio.svg" alt="" />
+      <img src="./img/WebStudio.svg" alt="WebStudio" />
       <ul>
         <li>
           <p>г. Киев, пр-т Леси Украинки, 26</p>
