--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <h3>Чем мы занимаемся</h3>
         <ul>
           <li>
-            <img src="./img/img.png" alt="Проект-1" />
+            <img src="./img/img.png" alt="Проект-1" width="370" height="294" />
           </li>
           <li>
-            <img src="./img/box%202.png" alt="Проект-2" />
+            <img src="./img/box%202.png" alt="Проект-2" width="370" height="294" />
           </li>
           <li>
-            <img src="./img/box%203.png" alt="Проект-3" />
+            <img src="./img/box%203.png" alt="Проект-3" width="370" height="294" />
           </li>
         </ul>
       </section>
@@ -77,22 +77,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./img/team%20card%201.jpg" alt="Игорь Демьяненко" width="270" />
+            <img src="./img/team%20card%201.jpg" alt="Игорь Демьяненко" width="270" height="260" />
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./img/team%20card%202.jpg" alt="Ольга Репина" width="270" />
+            <img src="./img/team%20card%202.jpg" alt="Ольга Репина" width="270" height="260" />
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./img/team%20card%203.jpg" alt="Николай Тарасов" width="270" />
+            <img src="./img/team%20card%203.jpg" alt="Николай Тарасов" width="270" height="260" />
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./img/team%20card%204.jpg" alt="Михаил Ермаков" width="270" />
+            <img src="./img/team%20card%204.jpg" alt="Михаил Ермаков" width="270" height="260" />
             <h3>Михаил Ермаков</h3>
             <p>UI Designer</p>
           </li>
