--- a/index.html
+++ b/index.html
@@ -102,17 +102,11 @@
     <!--Footer-->
     <footer>
       <img src="./img/WebStudio.svg" alt="WebStudio" />
-      <ul>
-        <li>
-          <p>г. Киев, пр-т Леси Украинки, 26</p>
-        </li>
-        <li>
-          <a href="mailto:info@example.com">info@example.com</a>
-        </li>
-        <li>
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
-        </li>
-      </ul>
+      <address>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <a href="mailto:info@example.com">info@example.com</a>
+        <a href="tel:+380991111111">+38 099 111 11 11</a>
+      </address>
     </footer>
   </body>
 </html>
