--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <h3>Чем мы занимаемся</h3>
         <ul>
           <li>
-            <img src="./img/img.png" alt="Проект-1" width="370" height="294" />
+            <img src="./img/img.jpg" alt="Проект-1" width="370" height="294" />
           </li>
           <li>
-            <img src="./img/box%202.png" alt="Проект-2" width="370" height="294" />
+            <img src="./img/box%202.jpg" alt="Проект-2" width="370" height="294" />
           </li>
           <li>
-            <img src="./img/box%203.png" alt="Проект-3" width="370" height="294" />
+            <img src="./img/box%203.jpg" alt="Проект-3" width="370" height="294" />
           </li>
         </ul>
       </section>
